# openreel-studio

./: .dockerignore  .env.example  .env.local.example  .env.production.example  .gitignore  .gitmodules  LICENSE  README.en.md  README.md  SETUP.en.md  SETUP.md  WORKFLOW_EDITOR_DESIGN.md  WORKFLOW_SPEC_PROTOCOL.md  docker-compose.prod.yml  docker-compose.yml  install.bat  install.sh  package-windows.bat  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/api/: Dockerfile  README.md  README.zh-CN.md  mcp_servers.json  pyproject.toml  run.py
apps/api/app/: config.py  desktop_server.py  main.py  mcp_client.py  mcp_server.py
apps/api/tests/: agent_plan_contract_helpers.py  conftest.py  test_agent_tool_contracts.py  test_agent_trace.py  test_canvas_node_placement.py  test_canvas_workflow_tools.py  test_chat_events.py  test_codex_app_server_bridge.py  test_context_compact.py  test_desktop_packaging_contracts.py  test_external_canvas_control_contracts.py  test_feature_flags.py  test_image_grid_operations.py  test_interaction_payload.py  test_llm_service.py  test_media_operations_routes.py  test_media_protocol_endpoint_contracts.py  test_media_url_signing.py  test_node_api_misc_contracts.py  test_node_contract_api.py  test_plan_video_mode_contracts.py  test_project_node_wait.py  test_project_session_sidebar_contracts.py  test_project_state_concurrency.py  test_prompt_fixed_prefix_budget.py  test_prompt_runtime_intake_contracts.py  test_prompt_synthesis_blueprint_node_contracts.py  test_reference_assets_contracts.py  test_reference_mentions.py  test_run_broker.py  (+29 more)
(+363 files in other folders)
