[project]
name = "drama-agent-api"
version = "0.0.1"
description = "OpenReel Studio backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "sqlmodel>=0.0.22",
    "aiosqlite>=0.20.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.2",
    "litellm>=1.51.0",
    "sse-starlette>=2.1.3",
    "python-multipart>=0.0.9",
    "mcp>=1.27.1",
    "json5>=0.14.0",
    "watchfiles>=1.1.1",
    "pillow>=10.4.0",
    "opencv-python-headless>=4.13.0.92",
]

[project.scripts]
drama-mcp-server = "app.mcp_server:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.7.0",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"
